--- a/LoanDefaultProbability_Zhuohang Li_80461_V1.ipynb
+++ b/LoanDefaultProbability_Zhuohang Li_80461_V1.ipynb
@@ -5,26 +5,19 @@
    "metadata": {
     "_cell_guid": "83708667-4fdc-1563-7b3a-06b6575d2865"
    },
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "The comment"
+    "\n",
+    "\n",
+    "# Coursework 2 - Loan Default Probability \n",
+    "\n",
+    "The goal of this case study is to build a machine learning model to predict the probability that a loan will default. By the end of the analysis you should be able to recommend a choice of model and associated hyperparameters.\n",
+    "\n",
+    "You must send upload workbook by midnight on Sunday 14th November. Make sure you have answered all of the questions below. \n",
+    "\n",
+    "I will provide you with guidance on what to do. Please follow it. You can discuss and propose your own suggestions at the end.\n",
+    "\n",
+    "Make sure it is clear and that it runs without errors - you can ensure this by doing \"restart and run all\""
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# DO THIS HERE"
-   ]
-  }
- ]
-}
   },
   {
    "cell_type": "markdown",
